[gd_scene load_steps=5 format=3 uid="uid://u5t7cxh43wy6"]

[ext_resource type="Script" path="res://scripts/projectile.gd" id="1_54ypf"]

[sub_resource type="BoxMesh" id="BoxMesh_vaps3"]
size = Vector3(0.25, 0.25, 0.25)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wckeq"]
albedo_color = Color(1, 0, 0, 1)
emission_enabled = true
emission = Color(1, 0, 0, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_qgrdf"]
size = Vector3(0.25, 0.25, 0.25)

[node name="Projectile" type="Node3D"]
script = ExtResource("1_54ypf")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_vaps3")
surface_material_override/0 = SubResource("StandardMaterial3D_wckeq")

[node name="CollisionArea" type="Area3D" parent="."]
collision_mask = 2
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="CollisionArea"]
shape = SubResource("BoxShape3D_qgrdf")

[node name="KillTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="OmniLight3D" type="OmniLight3D" parent="."]
light_color = Color(1, 0, 0, 1)
omni_range = 1.93767

[connection signal="body_entered" from="CollisionArea" to="." method="_on_area_3d_body_entered"]
[connection signal="timeout" from="KillTimer" to="." method="_on_kill_timer_timeout"]
